--- a/note/中文自然语言处理.md
+++ b/note/中文自然语言处理.md
@@ -41,6 +41,11 @@
 
 模型是算法工程师的主要产出成果。方案是多个模型的组合，用于真正解决某一方向的具体问题，是算法与业务的结合之处。场景是多个方案在线上部署的最终形态，是最终服务的提供者
 
+## 语义解析
+
+https://github.com/severin-lemaignan/dialogs
+https://github.com/Li-Shang/nlp_learn
+
 ## Chinese NLP Toolkits 中文NLP工具
 
 ### Toolkits 综合NLP工具包
